# AbstractVM

./: CMakeLists.txt  Makefile  README.md  data.avm  file.avm
inc/: Converter.hpp  Exceptions.hpp  Factory.hpp  IOperand.hpp  Lexer.hpp  MethodData.hpp  Operand.hpp  Parser.hpp  Token.hpp  VM.hpp  Visualizer.hpp
src/: Converter.cpp  Exceptions.cpp  Factory.cpp  Lexer.cpp  MethodData.cpp  Operand.cpp  Parser.cpp  Token.cpp  VM.cpp  Visualizer.cpp  main.cpp
tests/: many_syntax_errors.avm  no_exit_command.avm
tests/division_by_zero/: double_div_by_zero.avm  double_mod_by_zero.avm  float_div_by_zero.avm  float_mod_by_zero.avm  int16_div_by_zero.avm  int16_mod_by_zero.avm  int32_div_by_zero.avm  int32_mod_by_zero.avm  int8_div_by_zero.avm  int8_mod_by_zero.avm
tests/empty_stack/: empty_stack_add.avm  empty_stack_assert.avm  empty_stack_div.avm  empty_stack_dump.avm  empty_stack_mod.avm  empty_stack_mul.avm  empty_stack_pop.avm  empty_stack_print.avm  empty_stack_sub.avm
tests/too_few_operands/: too_few_add.avm  too_few_div.avm  too_few_mod.avm  too_few_mul.avm  too_few_sub.avm
tests/value_over_and_underflow/: int16_add_overflow.avm  int16_add_underflow.avm  int16_assert_overflow.avm  int16_assert_underflow.avm  int16_push_overflow.avm  int16_push_underflow.avm  int32_add_overflow.avm  int32_add_underflow.avm  int32_assert_overflow.avm  int32_assert_underflow.avm  int32_push_overflow.avm  int32_push_underflow.avm  int8_add_overflow.avm  int8_add_underflow.avm  int8_assert_overflow.avm  int8_assert_underflow.avm  int8_push_overflow.avm  int8_push_underflow.avm
